| Summary: | ASTERISK-22625: Core dump on ARI dial - ast_copy_string at .../include/asterisk/strings.h | ||
| Reporter: | Scott Griepentrog (sgriepentrog) | Labels: | |
| Date Opened: | 2013-10-01 15:24:25 | Date Closed: | 2013-10-03 14:22:44 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari |
| Versions: | 12.0.0-alpha1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace.txt | |
| Description: | Issued POST to http://172.20.1.9:8088/ari/channels/1380656527.14/dial with payload extension=201&context=from-internal and received core.
| ||
| Comments: | By: Scott Griepentrog (sgriepentrog) 2013-10-01 15:25:24.802-0500 Core dump backtrace | ||