Allow specifying a channel to dial an extension and context in an ARI dial operation.

(issue ASTERISK-22625)
Reported by: Scott Griepentrog


git-svn-id: https://origsvn.digium.com/svn/asterisk/branches/12@400254 65c4cc65-6c06-0410-ace0-fbb531ad65f3